adding infrastructure listing to API and Swagger
